--- a/app/views/users/parse.html.erb
+++ b/app/views/users/parse.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div style="float:left; width:67%; height:100%">
-<iframe src="<%=@url%>" name="ifr" id="myframe" style="width:100%;height:100%">
+<iframe name="ifr" id="myframe" style="width:100%;height:100%">
 
 </iframe>
 </div>
