--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,20 @@
 <html>
 <head>
   <title>ControlsreadTest</title>
+
+<meta name=”X-FRAME-OPTIONS” content=”SAMEORIGIN” />
+<meta name=”X-FRAME-OPTIONS” content=”GOFORITG” />
+
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 <script language="javascript">
 $(document).ready(function(){
 
- //myFrame = top.frames['ifr'];
- //myFrame.document.open();
- //myFrame.document.write(Encoder.htmlDecode("<%=@temp%>")); //Encoder.htmlDecode()
- //myFrame.document.close();
+ myFrame = top.frames['ifr'];
+ myFrame.document.open();
+ myFrame.document.write(Encoder.htmlDecode("<%=@temp%>")); //Encoder.htmlDecode()
+ myFrame.document.close();
 
 });
 </script>
